fix camper title overflow

--- a/src/components/Catalog/SearchResultItem/SearchResultItem.module.css
+++ b/src/components/Catalog/SearchResultItem/SearchResultItem.module.css
@@ -188,3 +188,10 @@
     gap: 16px;
     flex-wrap: wrap;
 }
+
+.itemName {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 340px;
+}
